# gradatim

./: .gitignore  building.md  building_windows.md
misc/: extra-gen.py  font-gen.py  spritesheet-grid-json.js  spritesheet-json.js
res/: 0-1.csv  0-2.csv  0-3.csv  0-4.csv  0-5.csv  0-6.csv  0-7.csv  1-1.csv  1-10.csv  1-11.csv  1-12.csv  1-2.csv  1-3.csv  1-4.csv  1-5.csv  1-6.csv  1-7.csv  1-8.csv  1-9.csv  c0.csv  c1.csv  chap.csv  chap2.csv  grid.aseprite  grid.csv  rua.csv  rub.csv  ss.csv  test.csv
src/: CMakeLists.txt  bekter.c  bekter.h  bekter_test.c  button.c  button.h  chapfin.c  chapfin.h  couverture.c  couverture.h  credits.c  credits.h  dialogue.c  dialogue.h  element.c  element.h  floue.c  floue.h  game_data.c  game_data.h  gameplay.c  gameplay.h  global.c  global.h  intro.c  intro.h  label.c  label.h  loading.c  loading.h  main.c  mod.c  mod.h  options.c  options.h  overworld.c  overworld.h  overworld_menu.c  overworld_menu.h  particle_sys.c  (+17 more)
src/orion/: CMakeLists.txt  libs_wrapper.cpp  libs_wrapper.h  orion.c  orion.h  test.c
src/orion/tests/: playplay.c  rhythm.c  stress.c
src/sim/: schnitt.c  schnitt.h  schnitt_test.c  sim.c  sim.h  sobj.c  sobj.h
